<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="20dp"
    android:background="@color/Blue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcome"
        android:text="@string/welcomeStr"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:textSize="36sp"
        android:layout_marginTop="200dp"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_centerInParent="true"
        android:id="@+id/txtView2"
        android:text="@string/Ready"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/twoBtns"
        android:layout_below="@id/txtView2"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:padding="100dp"
        android:gravity="center">

        <Button
            android:id="@+id/playBtnw"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:onClick="Move"
            android:text="@string/play"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>



</RelativeLayout>